# FuxiCTR

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION  CONTRIBUTORS.md  ChangeLog.md  LICENSE  README.md  UPDATES.md  install_instructions_poetry  process_model_zoo_init.py  pyproject.toml  requirements.txt  setup.py
benchmark/: enumerate_expid_list.py  fuxictr_version.py  run_expid.py  run_param_tuner.py
benchmarks/: config.csv  enumerate_expid_list.py  run.py  run_expid.py  run_expid_list.py  run_param_tuner.py
config/: README.md
data/: README.md
demo/: DCN_demo.py  DeepFM_demo.py  DeepFM_with_config.py  DeepFM_with_csv_config.py  DeepFM_with_h5.py  DeepFM_with_h5_config.py  DeepFM_with_pretrained_emb.py  DeepFM_with_sequence_feature.py  example1_DeepFM_demo.py  example1_build_dataset_to_h5.py  example1_build_dataset_to_npz.py  example1_build_dataset_to_parquet.py  example2_DeepFM_with_h5_input.py  example2_DeepFM_with_npz_input.py  example2_DeepFM_with_parquet_input.py  example3_DeepFM_with_csv_input.py  example3_DeepFM_with_h5_config.py  example3_DeepFM_with_npz_input.py  example4_DeepFM_with_csv_input.py  example4_DeepFM_with_pretrained_emb.py  example5_DIN_with_sequence_feature.py  example5_DeepFM_with_pretrained_emb.py  example5_DeepFM_with_pretrained_emb_as_weights.py  example6_DIN_with_sequence_feature.py  example6_DeepFM_with_custom_preprocess.py  example7_DeepFM_with_custom_preprocess.py  example7_DeepFM_with_customized_preprocess.py  example8_DCN_with_emb_feature_as_input.py  preprocess_h5_demo.py  preprocess_h5_weighted_demo.py  xDeepFM_demo.py
(+724 files in other folders)
